tests/parser/validinput/overloadedinf.idp
vocabulary V{
	
}
theory T:V{
	
}
structure S:V{
	
}

procedure main(){
	clone(S)
	clone(T)
	return 1
}